@@ -1,10 +1,10 @@
 #! /bin/sh
-# $Id: genconfig.sh,v 1.98 2019/09/01 22:59:15 nanard Exp $
+# $Id: genconfig.sh,v 1.101 2019/09/24 11:52:15 nanard Exp $
 # vim: tabstop=4 shiftwidth=4 noexpandtab
 #
 # miniupnp daemon
 # http://miniupnp.free.fr or https://miniupnp.tuxfamily.org/
-# (c) 2006-2018 Thomas Bernard
+# (c) 2006-2019 Thomas Bernard
 # This software is subject to the conditions detailed in the
 # LICENCE file provided within the distribution
 
@@ -102,7 +102,7 @@ ${RM} ${CONFIGFILE}
 
 echo "/* MiniUPnP Project" >> ${CONFIGFILE}
 echo " * http://miniupnp.free.fr/ or https://miniupnp.tuxfamily.org/" >> ${CONFIGFILE}
-echo " * (c) 2006-2018 Thomas Bernard" >> ${CONFIGFILE}
+echo " * (c) 2006-2019 Thomas Bernard" >> ${CONFIGFILE}
 echo " * generated by $0 on `date`" >> ${CONFIGFILE}
 echo " * `uname -a`" >> ${CONFIGFILE}
 if [ -z "$*" ] ; then
@@ -162,7 +162,9 @@ case $OS_NAME in
 		FW=pf
 		echo "#define USE_IFACEWATCHER 1" >> ${CONFIGFILE}
 		OS_URL=http://www.openbsd.org/
-		V6SOCKETS_ARE_V6ONLY=`sysctl -n net.inet6.ip6.v6only`
+		# net.inet6.ip6.v6only has been removed in recent OpenBSD versions
+		# Default to 1 in that case
+		V6SOCKETS_ARE_V6ONLY=`sysctl -n net.inet6.ip6.v6only || echo 1`
 		;;
 	FreeBSD | GNU/kFreeBSD)
 		VER=`grep '#define __FreeBSD_version' /usr/include/sys/param.h | awk '{print $3}'`
@@ -310,18 +312,23 @@ case $OS_NAME in
 			esac
 		fi
 		echo "#define USE_IFACEWATCHER 1" >> ${CONFIGFILE}
-		FW=netfilter
+		# Would be better to check for actual presence of nftable rules, but that requires root privileges
+		if [ -x "$(command -v nft)" ]; then
+			FW=nftables
+		else
+			FW=iptables
+		fi
 		V6SOCKETS_ARE_V6ONLY=`/sbin/sysctl -n net.ipv6.bindv6only`
 		;;
 	OpenWRT)
 		OS_URL=http://www.openwrt.org/
 		echo "#define USE_IFACEWATCHER 1" >> ${CONFIGFILE}
-		FW=netfilter
+		FW=iptables
 		;;
 	AstLinux)
 		OS_URL=http://www.astlinux.org/
 		echo "#define USE_IFACEWATCHER 1" >> ${CONFIGFILE}
-		FW=netfilter
+		FW=iptables
 		;;
 	Tomato)
 		OS_NAME=UPnP
@@ -337,7 +344,7 @@ case $OS_NAME in
 		echo "#ifdef TCONFIG_IPV6" >> ${CONFIGFILE}
 		echo "#define ENABLE_IPV6" >> ${CONFIGFILE}
 		echo "#endif" >> ${CONFIGFILE}
-		FW=netfilter
+		FW=iptables
 		;;
 	Darwin)
 		MAJORVER=`echo $OS_VERSION | cut -d. -f1`
@@ -368,8 +375,13 @@ case $FW in
 	ipfw)
 		echo "#define USE_IPFW 1" >> ${CONFIGFILE}
 		;;
-	netfilter)
+	iptables)
 		echo "#define USE_NETFILTER 1" >> ${CONFIGFILE}
+		echo "#define USE_IPTABLES  1" >> ${CONFIGFILE}
+		;;
+	nftables)
+		echo "#define USE_NETFILTER 1" >> ${CONFIGFILE}
+		echo "#define USE_NFTABLES  1" >> ${CONFIGFILE}
 		;;
 	*)
 		echo "Unknown Firewall/packet filtering software [$FW]"
